<resources>
    <string name="app_name">Nk Kutjevo</string>
    <string name="nav_home_title">Home</string>
    <string name="nav_header_title_text">NK Kutjevo</string>
    <string name="nav_news_title">News</string>
    <string name="nav_gallery_title">Gallery</string>
    <string name="nav_team_title">Team</string>
    <string name="nav_schedule_title">Schedule</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="player_image_content_description">Player imageModel</string>
    <string name="label_age_text">Age:</string>
    <string name="label_position_text">Position:</string>
    <string name="label_appearances_text">Appearances:</string>
    <string name="label_minutes_played_text">Minutes played:</string>
    <string name="label_goals_scored_text">Goals scored:</string>
    <string name="label_yellow_cards">Yellow cards:</string>
    <string name="label_red_cards_text">Red cards:</string>
    <string name="vs_text">VS</string>
    <string name="next_game_text">Next Game</string>
    <string name="calendar">Kalendar</string>
    <string name="table_header_team_text">Team</string>
    <string name="games_played">GP</string>
    <string name="won">W</string>
    <string name="games_lost">L</string>
    <string name="games_draw">D</string>
    <string name="goals_for">GF</string>
    <string name="goal_difference">GD</string>
    <string name="facebook_app_id">770172329847519</string>
    <string name="title_activity_maps">Map</string>
    <string name="versus">VS</string>
    <string name="next_game_date">Next game date</string>
    <string name="show_on_map">Show on map</string>
    <string name="our_latest_news">Our latest news</string>
    <string name="goals_against">GA</string>
</resources>
