<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@id/nav_header_home"
        android:icon="@drawable/ic_home"
        android:orderInCategory="100"
        android:title="@string/nav_home_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@id/nav_header_news"
        android:icon="@drawable/ic_news"
        android:orderInCategory="200"
        android:title="@string/nav_news_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@id/nav_header_gallery"
        android:icon="@drawable/ic_gallery"
        android:orderInCategory="300"
        android:title="@string/nav_gallery_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@id/nav_header_team"
        android:icon="@drawable/ic_team"
        android:orderInCategory="400"
        android:title="@string/nav_team_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@id/nav_header_schedule"
        android:icon="@drawable/ic_schedule"
        android:orderInCategory="500"
        android:title="@string/nav_schedule_title"
        app:showAsAction="ifRoom" />

</menu>